# earnings-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
backend/: config.py  main.py
backend/agents/: base_agent.py  bear_researcher.py  bull_researcher.py  fundamentals_analyst.py  portfolio_manager.py  sentiment_analyst.py  technical_analyst.py
backend/api/: schemas.py
backend/api/routes/: analyze.py  backtest.py  ingest.py  predictions.py  reputation.py  transcripts.py
backend/backtest/: reputation.py  runner.py
backend/data/: edgar.py  fmp.py  prices.py
backend/db/: init_db.py  models.py  session.py
backend/graph/: earnings_graph.py
docs/: architecture.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/backtest/: page.tsx
frontend/app/history/: page.tsx
frontend/app/ingest/: page.tsx
frontend/components/: AgentDebate.tsx  PredictionResult.tsx  ReputationChart.tsx
frontend/lib/: api.ts  types.ts
scripts/: populate_db.py  recon.py
tests/: conftest.py
tests/agents/: test_base_agent.py  test_bear_researcher.py  test_bull_researcher.py  test_fundamentals_analyst.py  test_portfolio_manager.py  test_sentiment_analyst.py  test_technical_analyst.py
tests/api/: test_analyze.py  test_backtest.py  test_predictions.py
tests/backtest/: test_reputation.py  test_runner.py
tests/data/: test_edgar.py  test_prices.py
tests/db/: test_models.py  test_session.py
tests/graph/: test_earnings_graph.py
