[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "earnings-agent"
version = "0.1.0"
description = "Multi-agent LLM framework for earnings call analysis"
requires-python = ">=3.11"
dependencies = [
    # HTTP client (async)
    "httpx>=0.27.0",
    # Price data
    "yfinance>=0.2.38",
    # LLM providers
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.2.0",
    # Agent orchestration
    "langgraph>=0.2.0",
    # Backend API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Environment
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx",   # already in main; listed for clarity in test context
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
